--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dat.gui": "^0.7.9",
     "gsap": "^3.11.5",
+    "mitt": "^3.0.0",
     "three": "^0.152.2",
     "vue": "^3.2.13"
   },
